--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>{{ repository.name }}</title>
+	<title>TurboEureka</title>
 	<link rel="manifest" href="/manifest.json">
 	<link rel="stylesheet" href="/styles/all.css">
 	<link rel="stylesheet" media="screen and (prefers-color-scheme: light)" href="/styles/light.css">
@@ -15,13 +15,13 @@
 
 <body>
 	<header>
-		<h1>{{ repository.name }}</h1>
+		<h1>TurboEureka</h1>
 	</header>
 	<main>
-		<h2>{{ repository.description }}</h2>
+		<h2>building a game with AI</h2>
 	</main>
 	<footer>
-		<small>&copy; 2024</small>
+		<small>&copy; 2025</small>
 	</footer>
 </body>
 
