improving parcel install

--- a/www/200.html
+++ b/www/200.html
@@ -4,7 +4,11 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 	<title>TurboEureka</title>
+	<meta name="description" content="Building a game with AI" />
+	<meta name="theme-color" content="#000000" />
+
 	<link rel="stylesheet" href="styles/all.css" />
 	<link rel="stylesheet" media="prefers-color-scheme: light" href="styles/light.css" />
 	<link rel="stylesheet" media="min-width: 800px" href="styles/wide.css" />
