--- a/www/200.html
+++ b/www/200.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" media="prefers-color-scheme: light" href="styles/light.css" />
 	<link rel="stylesheet" media="min-width: 800px" href="styles/wide.css" />
 	<link rel="icon" href="favicon.ico" />
+	<!-- Replace individual script imports with the single entry point -->
+	<script src="scripts/index.js" type="module"></script>
 	<script src="scripts/async.js" type="module"></script>
 	<script src="scripts/defer.js" type="module" defer></script>
 </head>
@@ -20,13 +22,14 @@
 <body>
 	<header>
 		<h1>TurboEureka</h1>
+		<nav>
+			<a href="/" is="router-link">Home</a>
+			<a href="/about" is="router-link">About</a>
+			<a href="/game" is="router-link">Game</a>
+		</nav>
 	</header>
-	<main>
-		<h2>building a game with AI</h2>
-		<picture>
-			<source srcset="icon/512.png" media="(min-width: 512px)" />
-			<img src="icon/192.png" alt="TurboEureka logo" />
-		</picture>
+	<main id="app-container">
+		<!-- Content will be loaded here by the router -->
 	</main>
 	<footer>
 		<small>&copy; 2025</small>
