--- a/www/200.html
+++ b/www/200.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" media="prefers-color-scheme: light" href="styles/light.css" />
 	<link rel="stylesheet" media="min-width: 800px" href="styles/wide.css" />
 	<link rel="icon" href="favicon.ico" />
-	<!-- Replace individual script imports with the single entry point -->
+	<!-- Add back the main script -->
 	<script src="scripts/index.js" type="module"></script>
 	<script src="scripts/async.js" type="module"></script>
 	<script src="scripts/defer.js" type="module" defer></script>
@@ -28,7 +28,7 @@
 			<a href="/game" is="router-link">Game</a>
 		</nav>
 	</header>
-	<main id="app-container">
+	<main id="page-container">
 		<!-- Content will be loaded here by the router -->
 	</main>
 	<footer>
