--- a/www/sprite.html
+++ b/www/sprite.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>TurboEureka</title>
+	<title>TurboEureka - Sprite</title>
 	<meta name="theme-color" content="#000000" />
 
 	<link rel="stylesheet" href="styles/index.css" />
@@ -18,23 +18,20 @@
 	<header>
 		<h1>TurboEureka!</h1>
 		<nav>
-			<a href="index.html" class="active">Welcome</a>
+			<a href="index.html">Welcome</a>
 			<a href="kart.html">Kart</a>
 			<a href="track.html">Track</a>
 			<a href="sky.html">Sky</a>
 			<a href="obstacle.html">Obstacle</a>
-			<a href="sprite.html">Sprite</a>
+			<a href="sprite.html" class="active">Sprite</a>
 			<a href="race.html">Race</a>
 		</nav>
 	</header>
 
-	<h2>Welcome!</h2>
+<p>Sprites are objects that can move around on the 3d space of the track. They are represented as Matter.js physics Bodies, and as such can be collided with. Karts, and Obstacles are both types of sprites.</p>
 
-	<p>Ready to race!? Choose a kart to get started!</p>
+<p>A sprite is a web component that takes a list of img elements as it's children and then uses those images to represent different sides of a single object</p>
 
-	<button>Choose a Kart!</button>
 
-	<script src="scripts/index.js" type="module"></script>
 </body>
-
 </html>
