--- a/www/track.html
+++ b/www/track.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>TurboEureka</title>
+	<title>TurboEureka - Track</title>
 	<meta name="theme-color" content="#000000" />
 
 	<link rel="stylesheet" href="styles/index.css" />
@@ -18,23 +18,18 @@
 	<header>
 		<h1>TurboEureka!</h1>
 		<nav>
-			<a href="index.html" class="active">Welcome</a>
+			<a href="index.html">Welcome</a>
 			<a href="kart.html">Kart</a>
-			<a href="track.html">Track</a>
+			<a href="track.html" class="active">Track</a>
 			<a href="sky.html">Sky</a>
 			<a href="obstacle.html">Obstacle</a>
 			<a href="sprite.html">Sprite</a>
 			<a href="race.html">Race</a>
 		</nav>
 	</header>
+	<h2>Track</h2>
 
-	<h2>Welcome!</h2>
+	<p>a track is a rectangular object like an image or a canvas which is skewed rotated and translated to give the appearance of perspective that is close to the object.</p>
 
-	<p>Ready to race!? Choose a kart to get started!</p>
-
-	<button>Choose a Kart!</button>
-
-	<script src="scripts/index.js" type="module"></script>
 </body>
-
 </html>
