--- a/www/index.html
+++ b/www/index.html
@@ -9,32 +9,12 @@
 	<meta name="theme-color" content="#000000" />
 
 	<link rel="stylesheet" href="styles/index.css" />
-	<link rel="stylesheet" media="prefers-color-scheme: light" href="styles/light.css" />
-	<link rel="stylesheet" media="min-width: 800px" href="styles/wide.css" />
 	<link rel="icon" href="favicon.ico" />
 </head>
 
 <body>
-	<header>
-		<h1>TurboEureka!</h1>
-		<nav>
-			<a href="index.html" class="active">Welcome</a>
-			<a href="kart.html">Kart</a>
-			<a href="track.html">Track</a>
-			<a href="sky.html">Sky</a>
-			<a href="obstacle.html">Obstacle</a>
-			<a href="sprite.html">Sprite</a>
-			<a href="race.html">Race</a>
-		</nav>
-	</header>
-
-	<h2>Welcome!</h2>
-
-	<p>Ready to race!? Choose a kart to get started!</p>
-
-	<button>Choose a Kart!</button>
-
-	<script src="scripts/index.js" type="module"></script>
+	<te-index></te-index>
+	<script src="index.js" type="module"></script>
 </body>
 
 </html>
