--- a/www/index.html
+++ b/www/index.html
@@ -4,9 +4,10 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="Interactive physics simulation using Matter.js and Web Components" />
 
-	<title>TurboEureka</title>
-	<meta name="theme-color" content="#000000" />
+	<title>TurboEureka - Physics Playground</title>
+	<meta name="theme-color" content="#3a86ff" />
 
 	<link rel="stylesheet" href="styles/index.css" />
 	<link rel="icon" href="favicon.ico" />
