--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 	<title>TurboEureka - Physics Playground</title>
 	<meta name="theme-color" content="#3a86ff" />
 
-	<link rel="stylesheet" href="styles/index.css" />
+	<link rel="stylesheet" href="index.css" />
 	<link rel="icon" href="favicon.ico" />
 </head>
 
