--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Interactive physics simulation using Matter.js and Web Components" />
 
 	<title>TurboEureka - Physics Playground</title>
-	<meta name="theme-color" content="#3a86ff" />
+	<meta name="theme-color" content="#121212" />
 
 	<link rel="stylesheet" href="index.css" />
 	<link rel="icon" href="favicon.ico" />
